--- a/DataAccess.Test/App.config
+++ b/DataAccess.Test/App.config
@@ -9,14 +9,32 @@
   </appSettings>
   <system.serviceModel>
     <bindings>
-      <basicHttpBinding>
-        <binding name="ServiceBinding" transferMode="Streamed" maxReceivedMessageSize="2147483647" receiveTimeout="00:5:00" maxBufferPoolSize="2147483647" />
-      </basicHttpBinding>
+      <webHttpBinding>
+        <binding name="ServiceBinding" 
+                 transferMode="Streamed"
+                 maxReceivedMessageSize="2147483647" receiveTimeout="00:5:00" maxBufferPoolSize="2147483647" />
+      </webHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost/MediaRepository/Service.svc/UserManager" binding="basicHttpBinding" bindingConfiguration="ServiceBinding" contract="MediaRepositoryWebRole.Contracts.IUserManager" />
-      <endpoint address="http://localhost/MediaRepository/Service.svc/MediaRepositoryService" binding="basicHttpBinding" bindingConfiguration="ServiceBinding" contract="MediaRepositoryWebRole.Contracts.IMediaRepositoryService" />
+      <endpoint address="http://localhost/MediaRepository/Service.svc/UserManager"
+                binding="webHttpBinding" 
+                bindingConfiguration="ServiceBinding"
+                behaviorConfiguration="RestBehavior"
+                contract="MediaRepositoryWebRole.Contracts.IUserManager" />
+      
+      <endpoint address="http://localhost/MediaRepository/Service.svc/MediaRepositoryService" 
+                binding="webHttpBinding"
+                bindingConfiguration="ServiceBinding"
+                behaviorConfiguration="RestBehavior"
+                contract="MediaRepositoryWebRole.Contracts.IMediaRepositoryService" />
     </client>
+    <behaviors>
+      <endpointBehaviors>
+        <behavior name="RestBehavior">
+          <webHttp />
+        </behavior>
+      </endpointBehaviors>
+    </behaviors>
   </system.serviceModel>
   <runtime>
     <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
