--- a/MediaRepositoryService/Web.config
+++ b/MediaRepositoryService/Web.config
@@ -1,17 +1,11 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-  <configSections>
-    <section name="dataCacheClients" type="Microsoft.ApplicationServer.Caching.DataCacheClientsSection, Microsoft.ApplicationServer.Caching.Core" allowLocation="true" allowDefinition="Everywhere" />
-    <section name="cacheDiagnostics" type="Microsoft.ApplicationServer.Caching.AzureCommon.DiagnosticsConfigurationSection, Microsoft.ApplicationServer.Caching.AzureCommon" allowLocation="true" allowDefinition="Everywhere" />
-  </configSections>
   <appSettings>
-    <!-- Service Bus specific app setings for messaging connections -->
     <add key="ConnectionString" value="UseDevelopmentStorage=true" />
     <add key="DeviceTable" value="DeviceTable" />
     <add key="UserTable" value="UserTable" />
     <add key="MediaTable" value="MediaTable" />
     <add key="QueryHistory" value="QueryHistory" />
-    <add key="Microsoft.ServiceBus.ConnectionString" value="Endpoint=sb://[your namespace].servicebus.windows.net;SharedSecretIssuer=owner;SharedSecretValue=[your secret]" />
   </appSettings>
   <!--  To collect diagnostic traces, uncomment the section below or merge with existing system.diagnostics section.
         To persist the traces to storage, update the DiagnosticsConnectionString setting with your storage credentials.
@@ -60,22 +54,44 @@
   <system.serviceModel>
     <services>
       <service name="MediaRepositoryWebRole.MediaRepositoryService" behaviorConfiguration="ServiceBehavior">
-        <endpoint address="UserManager" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding" contract="MediaRepositoryWebRole.Contracts.IUserManager" />
-        <endpoint address="MediaRepositoryService" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding" contract="MediaRepositoryWebRole.Contracts.IMediaRepositoryService" />
-        <endpoint contract="IMetadataExchange" binding="mexHttpBinding" address="mex" />
+        
+        <endpoint address="UserManager"
+                  behaviorConfiguration="RestBehavior"
+                  binding="webHttpBinding"
+                  bindingConfiguration="WebHttpBinding"
+                  contract="MediaRepositoryWebRole.Contracts.IUserManager" />
+        
+        <endpoint address="MediaRepositoryService"
+                  behaviorConfiguration="RestBehavior"
+                  binding="webHttpBinding" 
+                  bindingConfiguration="WebHttpBinding" 
+                  contract="MediaRepositoryWebRole.Contracts.IMediaRepositoryService" />
+        
+        <endpoint address="mex"
+                  binding="mexHttpBinding"
+                  contract="IMetadataExchange"/>
         <host>
           <baseAddresses>
-            <add baseAddress="http://localhost/MediaRepository/Service.svc" />
+            <add baseAddress="http://localhost/Repository/Service.svc" />
           </baseAddresses>
         </host>
       </service>
     </services>
     <bindings>
-      <basicHttpBinding>
-        <binding name="BasicHttpBinding" transferMode="Streamed" maxReceivedMessageSize="2147483647" receiveTimeout="00:5:00" maxBufferPoolSize="2147483647" />
-      </basicHttpBinding>
+      <webHttpBinding>
+        <binding name="WebHttpBinding" 
+                 transferMode="Streamed" 
+                 maxReceivedMessageSize="2147483647" 
+                 receiveTimeout="00:5:00" 
+                 maxBufferPoolSize="2147483647" />
+      </webHttpBinding>
     </bindings>
     <behaviors>
+      <endpointBehaviors>
+        <behavior name="RestBehavior">
+          <webHttp />
+        </behavior>
+      </endpointBehaviors>
       <serviceBehaviors>
         <behavior name="ServiceBehavior">
           <serviceMetadata httpGetEnabled="true" />
@@ -84,54 +100,9 @@
       </serviceBehaviors>
     </behaviors>
     <serviceHostingEnvironment multipleSiteBindingsEnabled="true" />
-    <extensions>
-      <!-- In this extension section we are introducing all known service bus extensions. User can remove the ones they don't need. -->
-      <behaviorExtensions>
-        <add name="connectionStatusBehavior" type="Microsoft.ServiceBus.Configuration.ConnectionStatusElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="transportClientEndpointBehavior" type="Microsoft.ServiceBus.Configuration.TransportClientEndpointBehaviorElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="serviceRegistrySettings" type="Microsoft.ServiceBus.Configuration.ServiceRegistrySettingsElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      </behaviorExtensions>
-      <bindingElementExtensions>
-        <add name="netMessagingTransport" type="Microsoft.ServiceBus.Messaging.Configuration.NetMessagingTransportExtensionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="tcpRelayTransport" type="Microsoft.ServiceBus.Configuration.TcpRelayTransportElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="httpRelayTransport" type="Microsoft.ServiceBus.Configuration.HttpRelayTransportElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="httpsRelayTransport" type="Microsoft.ServiceBus.Configuration.HttpsRelayTransportElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="onewayRelayTransport" type="Microsoft.ServiceBus.Configuration.RelayedOnewayTransportElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      </bindingElementExtensions>
-      <bindingExtensions>
-        <add name="basicHttpRelayBinding" type="Microsoft.ServiceBus.Configuration.BasicHttpRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="webHttpRelayBinding" type="Microsoft.ServiceBus.Configuration.WebHttpRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="ws2007HttpRelayBinding" type="Microsoft.ServiceBus.Configuration.WS2007HttpRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="netTcpRelayBinding" type="Microsoft.ServiceBus.Configuration.NetTcpRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="netOnewayRelayBinding" type="Microsoft.ServiceBus.Configuration.NetOnewayRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="netEventRelayBinding" type="Microsoft.ServiceBus.Configuration.NetEventRelayBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-        <add name="netMessagingBinding" type="Microsoft.ServiceBus.Messaging.Configuration.NetMessagingBindingCollectionElement, Microsoft.ServiceBus, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      </bindingExtensions>
-    </extensions>
   </system.serviceModel>
   <system.webServer>
     <modules runAllManagedModulesForAllRequests="true" />
     <directoryBrowse enabled="true" />
   </system.webServer>
-  <runtime>
-    <assemblyBinding xmlns="urn:schemas-microsoft-com:asm.v1">
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.Data.OData" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-5.2.0.0" newVersion="5.2.0.0" />
-      </dependentAssembly>
-      <dependentAssembly>
-        <assemblyIdentity name="Microsoft.WindowsAzure.Diagnostics" publicKeyToken="31bf3856ad364e35" culture="neutral" />
-        <bindingRedirect oldVersion="0.0.0.0-1.8.0.0" newVersion="1.8.0.0" />
-      </dependentAssembly>
-    </assemblyBinding>
-  </runtime>
-  <dataCacheClients>
-    <dataCacheClient name="default">
-      <autoDiscover isEnabled="true" identifier="[cache cluster role name]" />
-      <!--<localCache isEnabled="true" sync="TimeoutBased" objectCount="100000" ttlValue="300" />-->
-    </dataCacheClient>
-  </dataCacheClients>
-  <cacheDiagnostics>
-    <crashDump dumpLevel="Off" dumpStorageQuotaInMB="100" />
-  </cacheDiagnostics>
 </configuration>
