Moved to REST, tests

--- a/MediaRepositoryService/MediaRepositoryWebRole.csproj
+++ b/MediaRepositoryService/MediaRepositoryWebRole.csproj
@@ -153,7 +153,7 @@
           <AutoAssignPort>True</AutoAssignPort>
           <DevelopmentServerPort>65470</DevelopmentServerPort>
           <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost/MediaRepository</IISUrl>
+          <IISUrl>http://localhost/Repository</IISUrl>
           <NTLMAuthentication>False</NTLMAuthentication>
           <UseCustomServer>False</UseCustomServer>
           <CustomServerUrl>
