--- a/DataAccess.Test/App.config
+++ b/DataAccess.Test/App.config
@@ -10,23 +10,12 @@
   <system.serviceModel>
     <bindings>
       <webHttpBinding>
-        <binding name="ServiceBinding" 
-                 transferMode="Streamed"
-                 maxReceivedMessageSize="2147483647" receiveTimeout="00:5:00" maxBufferPoolSize="2147483647" />
+        <binding name="ServiceBinding" transferMode="Streamed" maxReceivedMessageSize="2147483647" receiveTimeout="00:5:00" maxBufferPoolSize="2147483647" />
       </webHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost/Repository/Service.svc/UserManager"
-                binding="webHttpBinding" 
-                bindingConfiguration="ServiceBinding"
-                behaviorConfiguration="RestBehavior"
-                contract="MediaRepositoryWebRole.Contracts.IUserManager" />
-      
-      <endpoint address="http://localhost/Repository/Service.svc/MediaRepositoryService" 
-                binding="webHttpBinding"
-                bindingConfiguration="ServiceBinding"
-                behaviorConfiguration="RestBehavior"
-                contract="MediaRepositoryWebRole.Contracts.IMediaRepositoryService" />
+      <endpoint address="http://localhost/Repository/Service.svc/UserManager" binding="webHttpBinding" bindingConfiguration="ServiceBinding" behaviorConfiguration="RestBehavior" contract="MediaRepositoryWebRole.Contracts.IUserManager" />
+      <endpoint address="http://localhost/Repository/Service.svc/MediaRepositoryService" binding="webHttpBinding" bindingConfiguration="ServiceBinding" behaviorConfiguration="RestBehavior" contract="MediaRepositoryWebRole.Contracts.IMediaRepositoryService" />
     </client>
     <behaviors>
       <endpointBehaviors>
