--- a/MediaRepositoryService/Web.config
+++ b/MediaRepositoryService/Web.config
@@ -6,6 +6,7 @@
     <add key="UserTable" value="UserTable" />
     <add key="MediaTable" value="MediaTable" />
     <add key="QueryHistory" value="QueryHistory" />
+    <add key="Uri" value="http://mediaupload.cloudapp.net" />
   </appSettings>
   <!--  To collect diagnostic traces, uncomment the section below or merge with existing system.diagnostics section.
         To persist the traces to storage, update the DiagnosticsConnectionString setting with your storage credentials.
@@ -81,8 +82,8 @@
       <webHttpBinding>
         <binding name="WebHttpBinding" 
                  transferMode="Streamed" 
-                 maxReceivedMessageSize="2147483647" 
-                 receiveTimeout="00:5:00" 
+                 maxReceivedMessageSize="2147483647"
+                 receiveTimeout="00:10:00" 
                  maxBufferPoolSize="2147483647" />
       </webHttpBinding>
     </bindings>
