--- a/DataAccess.Test/App.config
+++ b/DataAccess.Test/App.config
@@ -6,6 +6,7 @@
     <add key="UserTable" value="UserTable" />
     <add key="MediaTable" value="MediaTable" />
     <add key="QueryHistory" value="QueryHistory" />
+    <add key="Uri" value="http://mediaupload.cloudapp.net" />
   </appSettings>
   <system.serviceModel>
     <bindings>
@@ -14,8 +15,8 @@
       </webHttpBinding>
     </bindings>
     <client>
-      <endpoint address="http://localhost/Repository/Service.svc/UserManager" binding="webHttpBinding" bindingConfiguration="ServiceBinding" behaviorConfiguration="RestBehavior" contract="MediaRepositoryWebRole.Contracts.IUserManager" />
-      <endpoint address="http://localhost/Repository/Service.svc/MediaRepositoryService" binding="webHttpBinding" bindingConfiguration="ServiceBinding" behaviorConfiguration="RestBehavior" contract="MediaRepositoryWebRole.Contracts.IMediaRepositoryService" />
+      <endpoint address="http://mediaupload.cloudapp.net/Service.svc/UserManager" binding="webHttpBinding" bindingConfiguration="ServiceBinding" behaviorConfiguration="RestBehavior" contract="MediaRepositoryWebRole.Contracts.IUserManager" />
+      <endpoint address="http://mediaupload.cloudapp.net/Service.svc/MediaRepositoryService" binding="webHttpBinding" bindingConfiguration="ServiceBinding" behaviorConfiguration="RestBehavior" contract="MediaRepositoryWebRole.Contracts.IMediaRepositoryService" />
     </client>
     <behaviors>
       <endpointBehaviors>
